[gd_scene load_steps=27 format=2]

[ext_resource path="res://temp/plant.png" type="Texture" id=1]
[ext_resource path="res://scripts/tree.gd" type="Script" id=2]
[ext_resource path="res://temp/dirt.png" type="Texture" id=3]
[ext_resource path="res://temp/lose.png" type="Texture" id=4]
[ext_resource path="res://temp/cloud 1.png" type="Texture" id=6]
[ext_resource path="res://temp/sky.png" type="Texture" id=7]
[ext_resource path="res://temp/tree 1.png" type="Texture" id=14]
[ext_resource path="res://temp/tree 3.png" type="Texture" id=16]
[ext_resource path="res://temp/tree 5.png" type="Texture" id=17]
[ext_resource path="res://temp/tree 2.png" type="Texture" id=18]
[ext_resource path="res://temp/tree 4.png" type="Texture" id=19]
[ext_resource path="res://temp/cloud 2.png" type="Texture" id=20]
[ext_resource path="res://temp/cloud 3.png" type="Texture" id=21]
[ext_resource path="res://temp/static_roots.png" type="Texture" id=22]
[ext_resource path="res://temp/sun.png" type="Texture" id=25]
[ext_resource path="res://scripts/gui.gd" type="Script" id=26]

[sub_resource type="CapsuleShape2D" id=1]
radius = 51.0

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("clouds/Cloud1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -168, 121 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("clouds/Cloud3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1040, 91 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("clouds/Cloud2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1448, 145 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Daynight:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 45.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sun:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 190 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "clouds"
length = 60.0
tracks/0/type = "value"
tracks/0/path = NodePath("clouds/Cloud1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -168, 121 ), Vector2( 1441, 175 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("clouds/Cloud3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1040, 91 ), Vector2( -172, 145 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("clouds/Cloud2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1448, 145 ), Vector2( -386, 145 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Daynight:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 60 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, -233.7 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sun:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 24, 46.7, 60 ),
"transitions": PoolRealArray( 0.517632, 2.21914, 9.18958, 1 ),
"update": 0,
"values": [ Vector2( 0, 190 ), Vector2( 0, -391 ), Vector2( 0, 171 ), Vector2( 0, 70 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("camera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -150 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("camera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("canvas/Lose:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
resource_name = "gameover"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.584314 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Tree")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "toMenu"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("canvas/Lose:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 1.1, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "intro"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("camera:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -150 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("camera:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ColorRect:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 0.196146, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.670588, 0.172549, 0.172549, 1 )
border_width_top = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=14]
content_margin_top = 10.0
bg_color = Color( 0.12549, 0.12549, 0.12549, 0.576471 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.172549, 0.670588, 0.219608, 1 )
border_width_top = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.172549, 0.423529, 0.670588, 1 )
border_width_top = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[node name="GameWorld" type="Node2D"]

[node name="Tree" type="Area2D" parent="."]
position = Vector2( 629, 365 )
z_as_relative = false
script = ExtResource( 2 )

[node name="Daynight" type="Sprite" parent="Tree"]
position = Vector2( 24, 55 )
rotation = 0.785398
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 7 )
offset = Vector2( 3.959, 34.808 )

[node name="Sun" type="Sprite" parent="Tree"]
position = Vector2( 0, 190 )
texture = ExtResource( 25 )

[node name="shape" type="CollisionShape2D" parent="Tree"]
position = Vector2( 3, -39 )
shape = SubResource( 1 )

[node name="Plant" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( -5, 22 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Tree1" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( -3, -27.9999 )
scale = Vector2( 0.331195, 0.331195 )
texture = ExtResource( 14 )

[node name="Tree2" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( -1, -52 )
scale = Vector2( 0.405313, 0.405313 )
texture = ExtResource( 18 )

[node name="Tree3" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( 5, -72 )
texture = ExtResource( 16 )

[node name="Tree4" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( -13, -75.7198 )
scale = Vector2( 0.711485, 0.711485 )
texture = ExtResource( 19 )

[node name="Tree5" type="Sprite" parent="Tree/shape"]
visible = false
position = Vector2( 4, -130 )
scale = Vector2( 0.762, 0.762 )
texture = ExtResource( 17 )

[node name="background" type="Sprite" parent="Tree"]
position = Vector2( 52, 278 )
scale = Vector2( 1.02731, 1.06686 )
texture = ExtResource( 3 )

[node name="StaticRoots" type="Sprite" parent="Tree"]
position = Vector2( -1, 17 )
scale = Vector2( 0.256828, 0.266714 )
texture = ExtResource( 22 )

[node name="clouds" type="AnimationPlayer" parent="Tree"]
autoplay = "clouds"
playback_speed = 0.25
anims/RESET = SubResource( 7 )
anims/clouds = SubResource( 8 )

[node name="Cloud3" type="Sprite" parent="Tree/clouds"]
position = Vector2( 1040, 91 )
texture = ExtResource( 21 )

[node name="Cloud2" type="Sprite" parent="Tree/clouds"]
position = Vector2( 1448, 145 )
texture = ExtResource( 20 )

[node name="Cloud1" type="Sprite" parent="Tree/clouds"]
position = Vector2( -168, 121 )
texture = ExtResource( 6 )

[node name="water_timer" type="Timer" parent="Tree"]
autostart = true

[node name="trash_timer" type="Timer" parent="Tree"]
wait_time = 3.0
autostart = true

[node name="trash_timer_can" type="Timer" parent="Tree"]
wait_time = 4.0
autostart = true

[node name="trash_timer_ocan" type="Timer" parent="Tree"]
wait_time = 3.0
autostart = true

[node name="bugs and worms" type="Timer" parent="Tree"]
wait_time = 3.0
autostart = true

[node name="trash_timer_bag" type="Timer" parent="Tree"]
wait_time = 5.0
autostart = true

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 640, 480 )
offset = Vector2( 0, -150 )
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 960.0
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "intro"
playback_speed = 2.0
anims/RESET = SubResource( 11 )
anims/gameover = SubResource( 17 )
anims/intro = SubResource( 12 )

[node name="canvas" type="CanvasLayer" parent="."]

[node name="gui" type="Control" parent="canvas"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 26 )

[node name="MarginContainer2" type="MarginContainer" parent="canvas/gui"]
anchor_left = 0.043
anchor_right = 0.226
margin_left = -26.04
margin_top = 21.0
margin_right = 56.96
margin_bottom = 81.0

[node name="healthbar" type="ProgressBar" parent="canvas/gui/MarginContainer2"]
margin_right = 317.0
margin_bottom = 26.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 14 )
rounded = true

[node name="MarginContainer" type="MarginContainer" parent="canvas/gui"]
anchor_left = 0.043
anchor_right = 0.226
anchor_bottom = 1.0
margin_left = -26.04
margin_top = 55.0
margin_right = 56.96
margin_bottom = 35.0

[node name="growthbar" type="ProgressBar" parent="canvas/gui/MarginContainer"]
margin_right = 317.0
margin_bottom = 26.0
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 14 )

[node name="MarginContainer3" type="MarginContainer" parent="canvas/gui"]
anchor_left = 0.043
anchor_right = 0.226
margin_left = -26.04
margin_top = 89.0
margin_right = 56.96
margin_bottom = 115.0

[node name="waterbar" type="ProgressBar" parent="canvas/gui/MarginContainer3"]
margin_right = 317.0
margin_bottom = 26.0
custom_styles/fg = SubResource( 16 )
custom_styles/bg = SubResource( 14 )

[node name="Lose" type="Sprite" parent="canvas"]
visible = false
position = Vector2( 640, 480 )
texture = ExtResource( 4 )

[connection signal="timeout" from="Tree/water_timer" to="Tree" method="_on_water_timer_timeout"]
[connection signal="timeout" from="Tree/trash_timer" to="Tree" method="_on_trash_timer_timeout"]
[connection signal="timeout" from="Tree/trash_timer_can" to="Tree" method="_on_trash_timer_can_timeout"]
[connection signal="timeout" from="Tree/trash_timer_ocan" to="Tree" method="_on_trash_timer_ocan_timeout"]
[connection signal="timeout" from="Tree/bugs and worms" to="Tree" method="_on_bugs_and_worms_timeout"]
[connection signal="timeout" from="Tree/trash_timer_bag" to="Tree" method="_on_trash_timer_bag_timeout"]
